My first project

--- a/custom.html
+++ b/custom.html
@@ -2,8 +2,8 @@
 <html lang="zxx">
 
 <head>
-    <title>Lacoste Embroidery Service</title>
-    <link rel="icon" href="images/logo.png" type="image.png" sizes="16x16">
+    <title>Embroidery Service</title>
+    <link rel="icon" href="images/logo here.png" type="image.png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Lite Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -33,9 +33,9 @@
 <body>
         <!-- header -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;height: 70px;">
                 <div class="boxes">
-				<img src="images/logo.png" class="img-fluid">
+				<img src="images/logo here.png" class="img-fluid">
                 </div>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -94,9 +94,9 @@
                 <span></span>
             </div>
 
-<h3>Embroidered Patches by Lacoste Embroidery Service</h3>
+<h3>Embroidered Patches by Embroidery Service</h3>
 
-<p>Embroidered Patches - Lacoste Embroidery Service makes state of the art custom patches for every need. We do custom work for promotional companies, advertising agencies, signs and graphics, embroidery and screen printing, SAGE, ASI, PPAI distributors, and local retailers. We create iron on patches for companies and organizations of all sizes all over the US in all 50 states. We even create iron on patches for apparel manufacturers. They use our labels to decorate their famous clothing. When you need outstanding custom patches, let Lacoste Embroidery be your trusted supplier.</p>
+<p>Embroidered Patches -  Embroidery Service makes state of the art custom patches for every need. We do custom work for promotional companies, advertising agencies, signs and graphics, embroidery and screen printing, SAGE, ASI, PPAI distributors, and local retailers. We create iron on patches for companies and organizations of all sizes all over the US in all 50 states. We even create iron on patches for apparel manufacturers. They use our labels to decorate their famous clothing. When you need outstanding custom patches, let Lacoste Embroidery be your trusted supplier.</p>
 
 <img src="images/img1.jpg" class="img-fluid">
 
@@ -183,7 +183,7 @@
             <hr>
             <div class="d-flex justify-content-between pt-lg-5   footer-bottom-cpy">
                 <div class="cpy-right text-center">
-                    <p>© 2022 Lacoste Embroidery Service. All rights reserved
+                    <p>© 2022  Embroidery Service. All rights reserved
                     </p>
                 </div>
                 <div class="social-icons pb-md-0 pb-4">
