--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zxx">
 
 <head>
-    <title>Lacoste Embroidery Service</title>
-    <link rel="icon" href="images/logo.png" type="image.png" sizes="16x16">
+    <title>Embroidery Service</title>
+    <link rel="icon" href="images/logo here.png" type="image.png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Lite Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -36,9 +36,9 @@
         <!-- header -->
         <header>
             
-            <nav class="nav01 navbar navbar-expand-lg navbar-light bg-gradient-secondary " style="position: fixed;border-bottom-right-radius:100px;border-bottom-style: groove;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary " style="position: fixed;border-bottom-right-radius:100px;border-bottom-style: groove;height: 70px;">
                 <div class="boxes">
-				<img src="images/logo.png"  class="img-fluid">
+				<img src="images/logo here.png"  class="img-fluid">
                 </div>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -158,7 +158,7 @@
                     <i class="fas fa-palette"></i>
                 </div>
                 <h3>Custom Embroidery</h3>
-                <p>Embroidered Patches - Lacoste Embroidery Service makes state of the art custom patches for every need. We do custom work for promotional....</p>
+                <p>Embroidered Patches - Embroidery Service makes state of the art custom patches for every need. We do custom work for promotional....</p>
             </div></a>
         </div>
         <div class="col-md-3 col-sm-6">
@@ -185,7 +185,7 @@
 				<i class="fas fa-ruler-vertical"></i>
                 </div>
                 <h3>Vector Art Service</h3>
-                <p>We can convert your raster image into vector with an excellent quality. Lacoste Embroidery Service also give opportunity for providing digital look...</p>
+                <p>We can convert your raster image into vector with an excellent quality. Embroidery Service also give opportunity for providing digital look...</p>
             </div></a>
         </div>
 
@@ -263,7 +263,7 @@
                         <span class="process-circle"></span>
                         <h4 class="sec-title1">Leading Embroidered Patches Supplier</h4>
                     </div>
-                    <p class="mt-md-5 mb-3 mt-3">Lacoste Embroidery Service creates a lot of custom embroidered patches for official institutions like Military, Police, Firefighters, and EMS. We also create custom patches for sport teams, scouts, hospitals, labs, schools, and restaurants.</p>
+                    <p class="mt-md-5 mb-3 mt-3">Embroidery Service creates a lot of custom embroidered patches for official institutions like Military, Police, Firefighters, and EMS. We also create custom patches for sport teams, scouts, hospitals, labs, schools, and restaurants.</p>
                     <div class="process-direction2"></div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
             <hr>
             <div class="d-flex justify-content-between pt-lg-5   footer-bottom-cpy">
                 <div class="cpy-right text-center">
-                    <p>© 2022 Lacoste Embroidery Service. All rights reserved
+                    <p>© 2022 Embroidery Service. All rights reserved
                     </p>
                 </div>
                 <div class="social-icons pb-md-0 pb-4">
