--- a/vector.html
+++ b/vector.html
@@ -2,8 +2,8 @@
 <html lang="zxx">
 
 <head>
-    <title>Lacoste Embroidery Service</title>
-    <link rel="icon" href="images/logo.png" type="image.png" sizes="16x16">
+    <title>Embroidery Service</title>
+    <link rel="icon" href="images/logo here.png" type="image.png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Lite Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -33,9 +33,9 @@
 <body>
         <!-- header -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;height: 70px;">
                 <div class="boxes">
-				<img src="images/logo.png" class="img-fluid">
+				<img src="images/logo here.png" class="img-fluid">
                 </div>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
             </div>
 
 <h3>Vector Art Service</h3>
-<p>We can convert your raster image into vector with an excellent quality. Lacoste Embroidery Service also give opportunity for providing digital look of your hand drawing and give exceptional outlook of your hand drawing skill. We have talented vector art department who understand desires of customers and they always try to fulfill clients requirement with complete assurance. We can convert any kind of file into vector and provide crystal look of your art work after converting into vector. We provide AI, EPS, PDF, CDR, WMF & more and if customer want any other files so we will also send of them as per their requirement.</p>
+<p>We can convert your raster image into vector with an excellent quality.Embroidery Service also give opportunity for providing digital look of your hand drawing and give exceptional outlook of your hand drawing skill. We have talented vector art department who understand desires of customers and they always try to fulfill clients requirement with complete assurance. We can convert any kind of file into vector and provide crystal look of your art work after converting into vector. We provide AI, EPS, PDF, CDR, WMF & more and if customer want any other files so we will also send of them as per their requirement.</p>
 
 <br>
 <br>
