--- a/cpatches.html
+++ b/cpatches.html
@@ -2,8 +2,8 @@
 <html lang="zxx">
 
 <head>
-    <title>Lacoste Embroidery Service</title>
-    <link rel="icon" href="images/logo.png" type="image.png" sizes="16x16">
+    <title>Embroidery Service</title>
+    <link rel="icon" href="images/logo here.png" type="image.png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Lite Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -33,9 +33,9 @@
 <body>
         <!-- header -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3" style="background: #cccccc;position: fixed;border-bottom-right-radius: 100px;border-bottom-style: groove;height: 70px;">
                 <div class="boxes">
-				<img src="images/logo.png" class="img-fluid">
+				<img src="images/logo here.png" class="img-fluid">
                 </div>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -96,8 +96,7 @@
 
 <h3>Custom Patches</h3>
 
-<p>We do custom patches, embroidered patches, printed patches, custom Velcro patches, clothing labels, PVC patches, custom leather patches, custom keychains, and other promotional products. Following is an overview of our products.</p>
-
+<p>lo
 <br>
 <br>
 
@@ -339,7 +338,7 @@ Advised for unusual shape; kiss-cut or custom-cut shape; we can-not use Merrow-m
             <hr>
             <div class="d-flex justify-content-between pt-lg-5   footer-bottom-cpy">
                 <div class="cpy-right text-center">
-                    <p>© 2022 Lacoste Embroidery Service. All rights reserved
+                    <p>© 2022 Embroidery Service. All rights reserved
                     </p>
                 </div>
                 <div class="social-icons pb-md-0 pb-4">
